Finished refactors and fixes
