# services/AliasesService.js
@@ -2,13 +2,13 @@
 const Service = require('./Service');
 
 /**
-* Map an alias to a product
-*
-* aliasName String The name of the alias to map
-* productId Integer The product id to mapped this alias to (optional)
-* returns Alias
-* */
-const aliasAliasNamePUT = ({ aliasName, productId }) => new Promise(
+ * Map an alias to a product
+ *
+ * aliasName String The name of the alias to map
+ * productId Integer The product id to mapped this alias to (optional)
+ * returns Alias
+ * */
+const aliasAliasNamePUT = ({aliasName, productId}) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
@@ -24,16 +24,15 @@ const aliasAliasNamePUT = ({ aliasName, productId }) => new Promise(
   },
 );
 /**
-* Find all product aliases
-*
-* mappedOnly Boolean Flag to filter and bring only aliases mapped to a product (optional)
-* returns List
-* */
-const aliasGET = ({ mappedOnly }) => new Promise(
+ * Find all product aliases
+ *
+ * mappedOnly Boolean Flag to filter and bring only aliases mapped to a product (optional)
+ * returns List
+ * */
+const aliasGET = ({mappedOnly}) => new Promise(
   async (resolve, reject) => {
     try {
-      resolve(Service.successResponse([
-      ]));
+      resolve(Service.successResponse([]));
     } catch (e) {
       reject(Service.rejectResponse(
         e.message || 'Invalid input',
@@ -43,12 +42,12 @@ const aliasGET = ({ mappedOnly }) => new Promise(
   },
 );
 /**
-* Find a product by alias only and create the alias if a product is not found
-*
-* alias String Alias to search by (optional)
-* returns Product
-* */
-const aliasSearchGET = ({ alias }) => new Promise(
+ * Find a product by alias only and create the alias if a product is not found
+ *
+ * alias String Alias to search by (optional)
+ * returns Product
+ * */
+const aliasSearchGET = ({alias}) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
