# services/CategoriesService.js
@@ -2,12 +2,12 @@
 const Service = require('./Service');
 
 /**
-* Delete a category
-*
-* categoryName String Name of the category to be deleted
-* no response value expected for this operation
-* */
-const categoriesCategoryNameDELETE = ({ categoryName }) => new Promise(
+ * Delete a category
+ *
+ * categoryName String Name of the category to be deleted
+ * no response value expected for this operation
+ * */
+const categoriesCategoryNameDELETE = ({categoryName}) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
@@ -22,13 +22,13 @@ const categoriesCategoryNameDELETE = ({ categoryName }) => new Promise(
   },
 );
 /**
-* Modify a category
-*
-* categoryName String The category name that will change its parent category
-* modifyParentCategoryDto ModifyParentCategoryDto  (optional)
-* returns Category
-* */
-const categoriesCategoryNamePUT = ({ categoryName, modifyParentCategoryDto }) => new Promise(
+ * Modify a category
+ *
+ * categoryName String The category name that will change its parent category
+ * modifyParentCategoryDto ModifyParentCategoryDto  (optional)
+ * returns Category
+ * */
+const categoriesCategoryNamePUT = ({categoryName, modifyParentCategoryDto}) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
@@ -44,15 +44,14 @@ const categoriesCategoryNamePUT = ({ categoryName, modifyParentCategoryDto }) =>
   },
 );
 /**
-* Find all categories
-*
-* returns List
-* */
+ * Find all categories
+ *
+ * returns List
+ * */
 const categoriesGET = () => new Promise(
   async (resolve, reject) => {
     try {
-      resolve(Service.successResponse({
-      }));
+      resolve(Service.successResponse({}));
     } catch (e) {
       reject(Service.rejectResponse(
         e.message || 'Invalid input',
@@ -62,12 +61,12 @@ const categoriesGET = () => new Promise(
   },
 );
 /**
-* Creates a new category
-*
-* createCategoryDto CreateCategoryDto  (optional)
-* no response value expected for this operation
-* */
-const categoriesPOST = ({ createCategoryDto }) => new Promise(
+ * Creates a new category
+ *
+ * createCategoryDto CreateCategoryDto  (optional)
+ * no response value expected for this operation
+ * */
+const categoriesPOST = ({createCategoryDto}) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
